fix: fixing bugs

--- a/index.html
+++ b/index.html
@@ -121,20 +121,22 @@
     </section>
 
     <section class="background-section4">
-      <div class="container1-section4">
-        <h2>Micropigmentação de sobrancelhas</h2>
-        <div class="container3-section4">
-          <h4>
-            Assim como as pessoas, as sobrancelhas têm personalidades distintas, e é importante usar as técnicas adequadas para expressar sua individualidade.
-          </h4>
+      <div>
+        <div class="container1-section4">
+          <h2>Micropigmentação de sobrancelhas</h2>
+          <div class="container3-section4">
+            <h4>
+              Assim como as pessoas, as sobrancelhas têm personalidades distintas, e é importante usar as técnicas adequadas para expressar sua individualidade.
+            </h4>
+          </div>
         </div>
-      </div>
-
-      <div class="container2-section4">
-        <img src="imgs/olho1-section4 (2).jpg" alt="olhos" />
-        <img src="imgs/olhos-33.png" alt="olhos" />
-        <img src="imgs/olho2-section4 (2).jpg" alt="olhos" />
-        <img src="imgs/olhos-334.png" alt="olhos" />
+  
+        <div class="container2-section4">
+          <img src="imgs/olho1-section4 (2).jpg" alt="olhos" />
+          <img src="imgs/olhos-33.png" alt="olhos" />
+          <img src="imgs/olho2-section4 (2).jpg" alt="olhos" />
+          <img src="imgs/olhos-334.png" alt="olhos" />
+        </div>
       </div>
     </section>
 
